<resources>
    <string name="app_name">GarboGo</string>
    <string name="garbogo"><b>GarboGo</b></string>
    <string name="login_text"><b>Hi,\nPlease Login</b></string>
    <string name="email"><b>Email</b></string>
    <string name="username"><b>Username</b></string>
    <string name="emailHint">Enter Your Email</string>
    <string name="usernameHint">Enter Your Username</string>
    <string name="password"><b>Password</b></string>
    <string name="passwordHint">Enter Your Password</string>
    <string name="passwordFor">Forgot Your Password?\u0020</string>
    <string name="forgotPassword"><b><u>Click Here</u></b></string>
    <string name="login"><b>Login</b></string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="temp">No Error pls</string>
    <string name="don_t_have_and_account">Don\'t Have and Account?\u0020</string>
    <string name="create_n_account"><b>Create\nAccount</b></string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_password_again">Enter Your Password Again</string>
    <string name="create_accountBtn">Create Account</string>
    <string-array name="loginType">
        <item><b>User</b></item>
        <item><b>Worker</b></item>
    </string-array>
    <string name="loginInstead"><b><u>Login Instead</u></b></string>
    <string name="already_a_user">Already a User?\u0020</string>
    <string name="phone_no"><b>Phone No.</b></string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="not_received_email">Not received verification email?\u0020</string>
    <string name="resend"><u>Resend</u></string>
    <string name="logout">Logout</string>
    <string name="profile"><b>Profile</b></string>
    <string name="about_us"><b>About Us</b></string>
    <string name="logoutNB"><b>Logout</b></string>
    <string name="navOpen">Open Navigation drawer</string>
    <string name="navClose">Close Navigation drawer</string>
    <string name="aboutUS">This app is built using Android Studio in Java Language and uses Google firebase as the database.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="request_service">Request Service</string>
    <string name="track_request">Track Request</string>
    <string name="subject">Subject</string>
    <string name="query">Query</string>
    <string name="address">Address</string>
    <string name="mark_map">Mark on map</string>
    <string name="submit">Submit</string>
    <string name="confirmMsg">Are you sure that you want to proceed with registering this query?</string>
    <string name="warningMsgMap">ℹ️Disable the mark map if map shows a different \t\t\tlocation and enter the address manually</string>
    <string name="status"><b><u>status</u>:\u0020</b></string>
    <string name="pending">pending</string>
    <string name="subject_will_come_here">Subject will come here</string>
    <string name="your_name">Your Name</string>
    <string name="nameColon"><b><u>Name</u>:\u0020</b></string>
    <string name="emailColon"><b><u>Email</u>:\u0020</b></string>
    <string name="phoneColon"><b><u>Phone NO</u>:\u0020</b></string>
    <string name="youremail_something_com">youremail@something.com</string>
    <string name="_1234567890">1234567890</string>
    <string name="queryColon"><b><u>Query</u>:\u0020</b></string>
    <string name="subjectColon"><b><u>Subject</u>:\u0020</b></string>
    <string name="addressColon"><b><u>Address</u>:\u0020</b></string>
    <string name="statusColon"><b><u>Status</u>:\u0020</b></string>
    <string name="delete_request">Delete Request</string>
    <string name="user_subject">User Subject</string>
    <string name="user_query">User Query</string>
    <string name="user_address">User Address</string>
    <string name="user_full_name">User Full Name</string>
    <string name="useremail_somthing_com">useremail@somthing.com</string>
    <string name="navigate_to_address">Navigate to address</string>
    <string name="mark_address_on_map">Mark Address on Map</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mark_mapColon"><b><u>Mark Map</u>:\u0020</b></string>
    <string name="mark_as_completed">Mark as completed\u0020</string>
    <string name="confirm">Confirm</string>
    <string name="completed">completed</string>
    <string name="set_status"><b><u>Set Status</u>:\u0020</b></string>
</resources>