<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".requestService">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002">

        <EditText
            android:id="@+id/subjectET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:inputType="text"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:hint="@string/subject"
            android:padding="12dp" />

        <EditText
            android:id="@+id/queryET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/query"
            android:inputType="textMultiLine"
            android:lines="3"
            android:minHeight="48dp"
            android:overScrollMode="always"
            android:padding="12dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false" />

        <FrameLayout
            android:id="@+id/mapImp"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="12dp"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/mark_address_on_map"
            android:checked="true"
            android:textOn="@string/yes"
            android:textOff="@string/no"/>

        <EditText
            android:id="@+id/address_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:scrollHorizontally="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/warningMsgMap"/>

        <Button
            android:id="@+id/submitBtn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:backgroundTint="#673AB7"
            android:textStyle="bold"
            android:text="@string/submit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>