<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupUserActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/temp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/create_n_account"
        android:textColor="#ffffff"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingEnd="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:hint="Enter Your Name"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/conPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Confirm Password"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/conPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_your_password_again"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/mobileNoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/phone_no"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/mobileNoEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_your_phone_number"
            android:inputType="number"
            android:maxLength="10"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonSignUp"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/create_accountBtn"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.050000012">

            <TextView
                android:id="@+id/noAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_a_user"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/loginPg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loginInstead"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>